parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> S
Rule 1     S -> stmt S
Rule 2     S -> <empty>
Rule 3     stmt -> exp SEMICOL
Rule 4     stmt -> SEMICOL
Rule 5     stmt -> L_ROUND R_ROUND
Rule 6     stmt -> L_CURLY R_CURLY
Rule 7     stmt -> L_SQR R_SQR
Rule 8     stmt_blk -> L_CURLY S R_CURLY
Rule 9     stmt -> PRINT L_ROUND args R_ROUND SEMICOL
Rule 10    args -> exp
Rule 11    args -> args COMMA args
Rule 12    stmt -> if
Rule 13    if -> IF L_ROUND exp R_ROUND stmt_blk else
Rule 14    else -> ELSE stmt_blk
Rule 15    else -> ELSE if
Rule 16    else -> <empty>
Rule 17    stmt -> FOR L_ROUND stmt exp SEMICOL stmt R_ROUND stmt_blk
Rule 18    stmt -> STRUCT VAR_NAME dec_blk
Rule 19    stmt -> declare
Rule 20    stmt -> dec_blk
Rule 21    dec_blk -> L_CURLY declare R_CURLY
Rule 22    declare -> dec declare
Rule 23    declare -> <empty>
Rule 24    dec -> DATA_TYPE VAR_NAME SEMICOL
Rule 25    dec -> DATA_TYPE VAR_NAME ASSIGNMENT exp SEMICOL
Rule 26    stmt -> VAR_NAME ASSIGNMENT exp SEMICOL
Rule 27    exp -> L_ROUND exp R_ROUND
Rule 28    exp -> L_CURLY exp R_CURLY
Rule 29    exp -> L_SQR exp R_SQR
Rule 30    exp -> exp PLUS exp
Rule 31    exp -> exp MINUS exp
Rule 32    exp -> exp ASTERISK exp
Rule 33    exp -> exp FWSLASH exp
Rule 34    exp -> exp TOPI exp
Rule 35    exp -> exp MOD exp
Rule 36    exp -> exp LESSER exp
Rule 37    exp -> exp GREATER exp
Rule 38    exp -> exp LESSER_EQUAL exp
Rule 39    exp -> exp GREATER_EQUAL exp
Rule 40    exp -> exp IS_EQUAL exp
Rule 41    exp -> exp NOT_EQUAL exp
Rule 42    exp -> exp LOGICAL exp
Rule 43    exp -> MINUS exp
Rule 44    exp -> NOT exp
Rule 45    exp -> VAR_NAME PLUS_PLUS
Rule 46    exp -> VAR_NAME MINUS_MINUS
Rule 47    exp -> VAR_NAME
Rule 48    exp -> INT
Rule 49    exp -> FLOAT
Rule 50    exp -> STRING
Rule 51    exp -> CHAR
Rule 52    exp -> BOOL

Terminals, with rules where they appear

ASSIGNMENT           : 25 26
ASTERISK             : 32
BOOL                 : 52
CHAR                 : 51
COMMA                : 11
DATA_TYPE            : 24 25
ELSE                 : 14 15
FLOAT                : 49
FOR                  : 17
FWSLASH              : 33
GREATER              : 37
GREATER_EQUAL        : 39
IF                   : 13
INT                  : 48
IS_EQUAL             : 40
LESSER               : 36
LESSER_EQUAL         : 38
LOGICAL              : 42
L_CURLY              : 6 8 21 28
L_ROUND              : 5 9 13 17 27
L_SQR                : 7 29
MINUS                : 31 43
MINUS_MINUS          : 46
MOD                  : 35
NOT                  : 44
NOT_EQUAL            : 41
PLUS                 : 30
PLUS_PLUS            : 45
PRINT                : 9
R_CURLY              : 6 8 21 28
R_ROUND              : 5 9 13 17 27
R_SQR                : 7 29
SEMICOL              : 3 4 9 17 24 25 26
STRING               : 50
STRUCT               : 18
TOPI                 : 34
VAR_NAME             : 18 24 25 26 45 46 47
error                : 

Nonterminals, with rules where they appear

S                    : 1 8 0
args                 : 9 11 11
dec                  : 22
dec_blk              : 18 20
declare              : 19 21 22
else                 : 13
exp                  : 3 10 13 17 25 26 27 28 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 44
if                   : 12 15
stmt                 : 1 17 17
stmt_blk             : 13 14 17

Parsing method: LALR

state 0

    (0) S' -> . S
    (1) S -> . stmt S
    (2) S -> .
    (3) stmt -> . exp SEMICOL
    (4) stmt -> . SEMICOL
    (5) stmt -> . L_ROUND R_ROUND
    (6) stmt -> . L_CURLY R_CURLY
    (7) stmt -> . L_SQR R_SQR
    (9) stmt -> . PRINT L_ROUND args R_ROUND SEMICOL
    (12) stmt -> . if
    (17) stmt -> . FOR L_ROUND stmt exp SEMICOL stmt R_ROUND stmt_blk
    (18) stmt -> . STRUCT VAR_NAME dec_blk
    (19) stmt -> . declare
    (20) stmt -> . dec_blk
    (26) stmt -> . VAR_NAME ASSIGNMENT exp SEMICOL
    (27) exp -> . L_ROUND exp R_ROUND
    (28) exp -> . L_CURLY exp R_CURLY
    (29) exp -> . L_SQR exp R_SQR
    (30) exp -> . exp PLUS exp
    (31) exp -> . exp MINUS exp
    (32) exp -> . exp ASTERISK exp
    (33) exp -> . exp FWSLASH exp
    (34) exp -> . exp TOPI exp
    (35) exp -> . exp MOD exp
    (36) exp -> . exp LESSER exp
    (37) exp -> . exp GREATER exp
    (38) exp -> . exp LESSER_EQUAL exp
    (39) exp -> . exp GREATER_EQUAL exp
    (40) exp -> . exp IS_EQUAL exp
    (41) exp -> . exp NOT_EQUAL exp
    (42) exp -> . exp LOGICAL exp
    (43) exp -> . MINUS exp
    (44) exp -> . NOT exp
    (45) exp -> . VAR_NAME PLUS_PLUS
    (46) exp -> . VAR_NAME MINUS_MINUS
    (47) exp -> . VAR_NAME
    (48) exp -> . INT
    (49) exp -> . FLOAT
    (50) exp -> . STRING
    (51) exp -> . CHAR
    (52) exp -> . BOOL
    (13) if -> . IF L_ROUND exp R_ROUND stmt_blk else
    (22) declare -> . dec declare
    (23) declare -> .
    (21) dec_blk -> . L_CURLY declare R_CURLY
    (24) dec -> . DATA_TYPE VAR_NAME SEMICOL
    (25) dec -> . DATA_TYPE VAR_NAME ASSIGNMENT exp SEMICOL

  ! shift/reduce conflict for SEMICOL resolved as shift
  ! shift/reduce conflict for L_ROUND resolved as shift
  ! shift/reduce conflict for L_CURLY resolved as shift
  ! shift/reduce conflict for L_SQR resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for STRUCT resolved as shift
  ! shift/reduce conflict for VAR_NAME resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! reduce/reduce conflict for $end resolved using rule 2 (S -> .)
  ! shift/reduce conflict for DATA_TYPE resolved as shift
    $end            reduce using rule 2 (S -> .)
    SEMICOL         shift and go to state 4
    L_ROUND         shift and go to state 5
    L_CURLY         shift and go to state 6
    L_SQR           shift and go to state 7
    PRINT           shift and go to state 8
    FOR             shift and go to state 10
    STRUCT          shift and go to state 11
    VAR_NAME        shift and go to state 12
    MINUS           shift and go to state 15
    NOT             shift and go to state 16
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    STRING          shift and go to state 19
    CHAR            shift and go to state 20
    BOOL            shift and go to state 21
    IF              shift and go to state 22
    DATA_TYPE       shift and go to state 24

  ! SEMICOL         [ reduce using rule 23 (declare -> .) ]
  ! L_ROUND         [ reduce using rule 23 (declare -> .) ]
  ! L_CURLY         [ reduce using rule 23 (declare -> .) ]
  ! L_SQR           [ reduce using rule 23 (declare -> .) ]
  ! PRINT           [ reduce using rule 23 (declare -> .) ]
  ! FOR             [ reduce using rule 23 (declare -> .) ]
  ! STRUCT          [ reduce using rule 23 (declare -> .) ]
  ! VAR_NAME        [ reduce using rule 23 (declare -> .) ]
  ! MINUS           [ reduce using rule 23 (declare -> .) ]
  ! NOT             [ reduce using rule 23 (declare -> .) ]
  ! INT             [ reduce using rule 23 (declare -> .) ]
  ! FLOAT           [ reduce using rule 23 (declare -> .) ]
  ! STRING          [ reduce using rule 23 (declare -> .) ]
  ! CHAR            [ reduce using rule 23 (declare -> .) ]
  ! BOOL            [ reduce using rule 23 (declare -> .) ]
  ! IF              [ reduce using rule 23 (declare -> .) ]
  ! DATA_TYPE       [ reduce using rule 23 (declare -> .) ]
  ! $end            [ reduce using rule 23 (declare -> .) ]

    S                              shift and go to state 1
    stmt                           shift and go to state 2
    exp                            shift and go to state 3
    if                             shift and go to state 9
    dec_blk                        shift and go to state 13
    declare                        shift and go to state 14
    dec                            shift and go to state 23

state 1

    (0) S' -> S .



state 2

    (1) S -> stmt . S
    (1) S -> . stmt S
    (2) S -> .
    (3) stmt -> . exp SEMICOL
    (4) stmt -> . SEMICOL
    (5) stmt -> . L_ROUND R_ROUND
    (6) stmt -> . L_CURLY R_CURLY
    (7) stmt -> . L_SQR R_SQR
    (9) stmt -> . PRINT L_ROUND args R_ROUND SEMICOL
    (12) stmt -> . if
    (17) stmt -> . FOR L_ROUND stmt exp SEMICOL stmt R_ROUND stmt_blk
    (18) stmt -> . STRUCT VAR_NAME dec_blk
    (19) stmt -> . declare
    (20) stmt -> . dec_blk
    (26) stmt -> . VAR_NAME ASSIGNMENT exp SEMICOL
    (27) exp -> . L_ROUND exp R_ROUND
    (28) exp -> . L_CURLY exp R_CURLY
    (29) exp -> . L_SQR exp R_SQR
    (30) exp -> . exp PLUS exp
    (31) exp -> . exp MINUS exp
    (32) exp -> . exp ASTERISK exp
    (33) exp -> . exp FWSLASH exp
    (34) exp -> . exp TOPI exp
    (35) exp -> . exp MOD exp
    (36) exp -> . exp LESSER exp
    (37) exp -> . exp GREATER exp
    (38) exp -> . exp LESSER_EQUAL exp
    (39) exp -> . exp GREATER_EQUAL exp
    (40) exp -> . exp IS_EQUAL exp
    (41) exp -> . exp NOT_EQUAL exp
    (42) exp -> . exp LOGICAL exp
    (43) exp -> . MINUS exp
    (44) exp -> . NOT exp
    (45) exp -> . VAR_NAME PLUS_PLUS
    (46) exp -> . VAR_NAME MINUS_MINUS
    (47) exp -> . VAR_NAME
    (48) exp -> . INT
    (49) exp -> . FLOAT
    (50) exp -> . STRING
    (51) exp -> . CHAR
    (52) exp -> . BOOL
    (13) if -> . IF L_ROUND exp R_ROUND stmt_blk else
    (22) declare -> . dec declare
    (23) declare -> .
    (21) dec_blk -> . L_CURLY declare R_CURLY
    (24) dec -> . DATA_TYPE VAR_NAME SEMICOL
    (25) dec -> . DATA_TYPE VAR_NAME ASSIGNMENT exp SEMICOL

  ! shift/reduce conflict for SEMICOL resolved as shift
  ! shift/reduce conflict for L_ROUND resolved as shift
  ! shift/reduce conflict for L_CURLY resolved as shift
  ! shift/reduce conflict for L_SQR resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for STRUCT resolved as shift
  ! shift/reduce conflict for VAR_NAME resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! reduce/reduce conflict for $end resolved using rule 2 (S -> .)
  ! reduce/reduce conflict for R_CURLY resolved using rule 2 (S -> .)
  ! shift/reduce conflict for DATA_TYPE resolved as shift
    $end            reduce using rule 2 (S -> .)
    R_CURLY         reduce using rule 2 (S -> .)
    SEMICOL         shift and go to state 4
    L_ROUND         shift and go to state 5
    L_CURLY         shift and go to state 6
    L_SQR           shift and go to state 7
    PRINT           shift and go to state 8
    FOR             shift and go to state 10
    STRUCT          shift and go to state 11
    VAR_NAME        shift and go to state 12
    MINUS           shift and go to state 15
    NOT             shift and go to state 16
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    STRING          shift and go to state 19
    CHAR            shift and go to state 20
    BOOL            shift and go to state 21
    IF              shift and go to state 22
    DATA_TYPE       shift and go to state 24

  ! SEMICOL         [ reduce using rule 23 (declare -> .) ]
  ! L_ROUND         [ reduce using rule 23 (declare -> .) ]
  ! L_CURLY         [ reduce using rule 23 (declare -> .) ]
  ! L_SQR           [ reduce using rule 23 (declare -> .) ]
  ! PRINT           [ reduce using rule 23 (declare -> .) ]
  ! FOR             [ reduce using rule 23 (declare -> .) ]
  ! STRUCT          [ reduce using rule 23 (declare -> .) ]
  ! VAR_NAME        [ reduce using rule 23 (declare -> .) ]
  ! MINUS           [ reduce using rule 23 (declare -> .) ]
  ! NOT             [ reduce using rule 23 (declare -> .) ]
  ! INT             [ reduce using rule 23 (declare -> .) ]
  ! FLOAT           [ reduce using rule 23 (declare -> .) ]
  ! STRING          [ reduce using rule 23 (declare -> .) ]
  ! CHAR            [ reduce using rule 23 (declare -> .) ]
  ! BOOL            [ reduce using rule 23 (declare -> .) ]
  ! IF              [ reduce using rule 23 (declare -> .) ]
  ! DATA_TYPE       [ reduce using rule 23 (declare -> .) ]
  ! $end            [ reduce using rule 23 (declare -> .) ]
  ! R_CURLY         [ reduce using rule 23 (declare -> .) ]

    stmt                           shift and go to state 2
    S                              shift and go to state 25
    exp                            shift and go to state 3
    if                             shift and go to state 9
    dec_blk                        shift and go to state 13
    declare                        shift and go to state 14
    dec                            shift and go to state 23

state 3

    (3) stmt -> exp . SEMICOL
    (30) exp -> exp . PLUS exp
    (31) exp -> exp . MINUS exp
    (32) exp -> exp . ASTERISK exp
    (33) exp -> exp . FWSLASH exp
    (34) exp -> exp . TOPI exp
    (35) exp -> exp . MOD exp
    (36) exp -> exp . LESSER exp
    (37) exp -> exp . GREATER exp
    (38) exp -> exp . LESSER_EQUAL exp
    (39) exp -> exp . GREATER_EQUAL exp
    (40) exp -> exp . IS_EQUAL exp
    (41) exp -> exp . NOT_EQUAL exp
    (42) exp -> exp . LOGICAL exp

    SEMICOL         shift and go to state 26
    PLUS            shift and go to state 27
    MINUS           shift and go to state 28
    ASTERISK        shift and go to state 29
    FWSLASH         shift and go to state 30
    TOPI            shift and go to state 31
    MOD             shift and go to state 32
    LESSER          shift and go to state 33
    GREATER         shift and go to state 34
    LESSER_EQUAL    shift and go to state 35
    GREATER_EQUAL   shift and go to state 36
    IS_EQUAL        shift and go to state 37
    NOT_EQUAL       shift and go to state 38
    LOGICAL         shift and go to state 39


state 4

    (4) stmt -> SEMICOL .

    SEMICOL         reduce using rule 4 (stmt -> SEMICOL .)
    L_ROUND         reduce using rule 4 (stmt -> SEMICOL .)
    L_CURLY         reduce using rule 4 (stmt -> SEMICOL .)
    L_SQR           reduce using rule 4 (stmt -> SEMICOL .)
    PRINT           reduce using rule 4 (stmt -> SEMICOL .)
    FOR             reduce using rule 4 (stmt -> SEMICOL .)
    STRUCT          reduce using rule 4 (stmt -> SEMICOL .)
    VAR_NAME        reduce using rule 4 (stmt -> SEMICOL .)
    MINUS           reduce using rule 4 (stmt -> SEMICOL .)
    NOT             reduce using rule 4 (stmt -> SEMICOL .)
    INT             reduce using rule 4 (stmt -> SEMICOL .)
    FLOAT           reduce using rule 4 (stmt -> SEMICOL .)
    STRING          reduce using rule 4 (stmt -> SEMICOL .)
    CHAR            reduce using rule 4 (stmt -> SEMICOL .)
    BOOL            reduce using rule 4 (stmt -> SEMICOL .)
    IF              reduce using rule 4 (stmt -> SEMICOL .)
    DATA_TYPE       reduce using rule 4 (stmt -> SEMICOL .)
    $end            reduce using rule 4 (stmt -> SEMICOL .)
    R_CURLY         reduce using rule 4 (stmt -> SEMICOL .)
    R_ROUND         reduce using rule 4 (stmt -> SEMICOL .)


state 5

    (5) stmt -> L_ROUND . R_ROUND
    (27) exp -> L_ROUND . exp R_ROUND
    (27) exp -> . L_ROUND exp R_ROUND
    (28) exp -> . L_CURLY exp R_CURLY
    (29) exp -> . L_SQR exp R_SQR
    (30) exp -> . exp PLUS exp
    (31) exp -> . exp MINUS exp
    (32) exp -> . exp ASTERISK exp
    (33) exp -> . exp FWSLASH exp
    (34) exp -> . exp TOPI exp
    (35) exp -> . exp MOD exp
    (36) exp -> . exp LESSER exp
    (37) exp -> . exp GREATER exp
    (38) exp -> . exp LESSER_EQUAL exp
    (39) exp -> . exp GREATER_EQUAL exp
    (40) exp -> . exp IS_EQUAL exp
    (41) exp -> . exp NOT_EQUAL exp
    (42) exp -> . exp LOGICAL exp
    (43) exp -> . MINUS exp
    (44) exp -> . NOT exp
    (45) exp -> . VAR_NAME PLUS_PLUS
    (46) exp -> . VAR_NAME MINUS_MINUS
    (47) exp -> . VAR_NAME
    (48) exp -> . INT
    (49) exp -> . FLOAT
    (50) exp -> . STRING
    (51) exp -> . CHAR
    (52) exp -> . BOOL

    R_ROUND         shift and go to state 41
    L_ROUND         shift and go to state 40
    L_CURLY         shift and go to state 43
    L_SQR           shift and go to state 44
    MINUS           shift and go to state 15
    NOT             shift and go to state 16
    VAR_NAME        shift and go to state 45
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    STRING          shift and go to state 19
    CHAR            shift and go to state 20
    BOOL            shift and go to state 21

    exp                            shift and go to state 42

state 6

    (6) stmt -> L_CURLY . R_CURLY
    (28) exp -> L_CURLY . exp R_CURLY
    (21) dec_blk -> L_CURLY . declare R_CURLY
    (27) exp -> . L_ROUND exp R_ROUND
    (28) exp -> . L_CURLY exp R_CURLY
    (29) exp -> . L_SQR exp R_SQR
    (30) exp -> . exp PLUS exp
    (31) exp -> . exp MINUS exp
    (32) exp -> . exp ASTERISK exp
    (33) exp -> . exp FWSLASH exp
    (34) exp -> . exp TOPI exp
    (35) exp -> . exp MOD exp
    (36) exp -> . exp LESSER exp
    (37) exp -> . exp GREATER exp
    (38) exp -> . exp LESSER_EQUAL exp
    (39) exp -> . exp GREATER_EQUAL exp
    (40) exp -> . exp IS_EQUAL exp
    (41) exp -> . exp NOT_EQUAL exp
    (42) exp -> . exp LOGICAL exp
    (43) exp -> . MINUS exp
    (44) exp -> . NOT exp
    (45) exp -> . VAR_NAME PLUS_PLUS
    (46) exp -> . VAR_NAME MINUS_MINUS
    (47) exp -> . VAR_NAME
    (48) exp -> . INT
    (49) exp -> . FLOAT
    (50) exp -> . STRING
    (51) exp -> . CHAR
    (52) exp -> . BOOL
    (22) declare -> . dec declare
    (23) declare -> .
    (24) dec -> . DATA_TYPE VAR_NAME SEMICOL
    (25) dec -> . DATA_TYPE VAR_NAME ASSIGNMENT exp SEMICOL

  ! shift/reduce conflict for R_CURLY resolved as shift
    R_CURLY         shift and go to state 46
    L_ROUND         shift and go to state 40
    L_CURLY         shift and go to state 43
    L_SQR           shift and go to state 44
    MINUS           shift and go to state 15
    NOT             shift and go to state 16
    VAR_NAME        shift and go to state 45
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    STRING          shift and go to state 19
    CHAR            shift and go to state 20
    BOOL            shift and go to state 21
    DATA_TYPE       shift and go to state 24

  ! R_CURLY         [ reduce using rule 23 (declare -> .) ]

    exp                            shift and go to state 47
    declare                        shift and go to state 48
    dec                            shift and go to state 23

state 7

    (7) stmt -> L_SQR . R_SQR
    (29) exp -> L_SQR . exp R_SQR
    (27) exp -> . L_ROUND exp R_ROUND
    (28) exp -> . L_CURLY exp R_CURLY
    (29) exp -> . L_SQR exp R_SQR
    (30) exp -> . exp PLUS exp
    (31) exp -> . exp MINUS exp
    (32) exp -> . exp ASTERISK exp
    (33) exp -> . exp FWSLASH exp
    (34) exp -> . exp TOPI exp
    (35) exp -> . exp MOD exp
    (36) exp -> . exp LESSER exp
    (37) exp -> . exp GREATER exp
    (38) exp -> . exp LESSER_EQUAL exp
    (39) exp -> . exp GREATER_EQUAL exp
    (40) exp -> . exp IS_EQUAL exp
    (41) exp -> . exp NOT_EQUAL exp
    (42) exp -> . exp LOGICAL exp
    (43) exp -> . MINUS exp
    (44) exp -> . NOT exp
    (45) exp -> . VAR_NAME PLUS_PLUS
    (46) exp -> . VAR_NAME MINUS_MINUS
    (47) exp -> . VAR_NAME
    (48) exp -> . INT
    (49) exp -> . FLOAT
    (50) exp -> . STRING
    (51) exp -> . CHAR
    (52) exp -> . BOOL

    R_SQR           shift and go to state 49
    L_ROUND         shift and go to state 40
    L_CURLY         shift and go to state 43
    L_SQR           shift and go to state 44
    MINUS           shift and go to state 15
    NOT             shift and go to state 16
    VAR_NAME        shift and go to state 45
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    STRING          shift and go to state 19
    CHAR            shift and go to state 20
    BOOL            shift and go to state 21

    exp                            shift and go to state 50

state 8

    (9) stmt -> PRINT . L_ROUND args R_ROUND SEMICOL

    L_ROUND         shift and go to state 51


state 9

    (12) stmt -> if .

    SEMICOL         reduce using rule 12 (stmt -> if .)
    L_ROUND         reduce using rule 12 (stmt -> if .)
    L_CURLY         reduce using rule 12 (stmt -> if .)
    L_SQR           reduce using rule 12 (stmt -> if .)
    PRINT           reduce using rule 12 (stmt -> if .)
    FOR             reduce using rule 12 (stmt -> if .)
    STRUCT          reduce using rule 12 (stmt -> if .)
    VAR_NAME        reduce using rule 12 (stmt -> if .)
    MINUS           reduce using rule 12 (stmt -> if .)
    NOT             reduce using rule 12 (stmt -> if .)
    INT             reduce using rule 12 (stmt -> if .)
    FLOAT           reduce using rule 12 (stmt -> if .)
    STRING          reduce using rule 12 (stmt -> if .)
    CHAR            reduce using rule 12 (stmt -> if .)
    BOOL            reduce using rule 12 (stmt -> if .)
    IF              reduce using rule 12 (stmt -> if .)
    DATA_TYPE       reduce using rule 12 (stmt -> if .)
    $end            reduce using rule 12 (stmt -> if .)
    R_CURLY         reduce using rule 12 (stmt -> if .)
    R_ROUND         reduce using rule 12 (stmt -> if .)


state 10

    (17) stmt -> FOR . L_ROUND stmt exp SEMICOL stmt R_ROUND stmt_blk

    L_ROUND         shift and go to state 52


state 11

    (18) stmt -> STRUCT . VAR_NAME dec_blk

    VAR_NAME        shift and go to state 53


state 12

    (26) stmt -> VAR_NAME . ASSIGNMENT exp SEMICOL
    (45) exp -> VAR_NAME . PLUS_PLUS
    (46) exp -> VAR_NAME . MINUS_MINUS
    (47) exp -> VAR_NAME .

    ASSIGNMENT      shift and go to state 54
    PLUS_PLUS       shift and go to state 55
    MINUS_MINUS     shift and go to state 56
    SEMICOL         reduce using rule 47 (exp -> VAR_NAME .)
    PLUS            reduce using rule 47 (exp -> VAR_NAME .)
    MINUS           reduce using rule 47 (exp -> VAR_NAME .)
    ASTERISK        reduce using rule 47 (exp -> VAR_NAME .)
    FWSLASH         reduce using rule 47 (exp -> VAR_NAME .)
    TOPI            reduce using rule 47 (exp -> VAR_NAME .)
    MOD             reduce using rule 47 (exp -> VAR_NAME .)
    LESSER          reduce using rule 47 (exp -> VAR_NAME .)
    GREATER         reduce using rule 47 (exp -> VAR_NAME .)
    LESSER_EQUAL    reduce using rule 47 (exp -> VAR_NAME .)
    GREATER_EQUAL   reduce using rule 47 (exp -> VAR_NAME .)
    IS_EQUAL        reduce using rule 47 (exp -> VAR_NAME .)
    NOT_EQUAL       reduce using rule 47 (exp -> VAR_NAME .)
    LOGICAL         reduce using rule 47 (exp -> VAR_NAME .)


state 13

    (20) stmt -> dec_blk .
